--- a/Templates/Designs/TTonline/New_Article.cshtml
+++ b/Templates/Designs/TTonline/New_Article.cshtml
@@ -11,42 +11,20 @@
 @Include("Includes/New_PlaceholderHelpers.cshtml")
 @using System.Web
 @{
-string articleImage = GetString("Item.ImaginePrincipala.Value"),
-	     articleTitle = GetString("Item.PageName");
-string articleAutori = GetString("Item.Autori");
-string articleSections = "";
-string articleTagList = GetString("Item.Taguri");
-string articleCompanyDe = GetString("Item.De_Companie");
-string articleCompanyDespre = GetString("Item.Despre_Companie");
-string articleCompanySiDespre = GetString("Item.Si_Despre_Companie");
-string articleRelevantaGeografica = GetString("Item.RelevantaGeografica");
-string articleViews = GetString("Item.Visits");
-int articleSectiuneID = GetInteger("Item.SectiuneParinteId");
+  string articleImage = GetString("Item.ImaginePrincipala.Value");
+  string articleAutori = GetString("Item.Autori");
+  string articleCompanyDe = GetString("Item.De_Companie");
+  int articleSectiuneID = GetInteger("Item.SectiuneParinteId");
   string articleID = GetString("Item.Id.Value");
-bool AdserverBanner = GetBoolean("Item.Adserver_Banner.Value");
-string linkBanner = GetString("Item.Link_Banner");
-string imagineBanner = GetString("Item.Imagine_Banner");
-string articlePersoana = "";
-string linkAutor = "";
-string filterValue1 = "Item.De_Companie ='"+ GetString("Item.De_Companie.Value") +"'";
-string filterValue4 = "Item.Autori ='"+ GetString("Item.Autori.Value") +"'" + " and " + "Item.SectiuneParinteId !='" + GetString("Item.SectiuneParinteId.Value") +"'";
-string filterValue3 = "Item.SectiuneParinteId ='"+ GetString("Item.SectiuneParinteId.Value") +"'" + " and " + "Item.Id !='" + articleID   +"'" ;
-string filterValue2 = "Item.Autori ='"+ GetString("Item.Autori.Value") +"'" + " and " + "Item.Id !='" + GetString("Item.Id.Value")  +"'" ;
-
-int counterAutor = 1;
-
-List<Autor> articleAutoriList = GetAutori(articleAutori);
-List<Sectiune> articleSectionsList = GetSectiuni(articleSections);
-List<Tag> articleTaguri = GetTaguri(articleTagList);
-List<Companie> articleDeCompanieList = GetCompany(articleCompanyDe);
-List<Companie> articleDespreCompanieList = GetCompany(articleCompanyDespre);
-List<Companie> articleSiDespreCompanieList = GetCompany(articleCompanySiDespre);
-int counterAutorSecundar = articleAutoriList.Count(); 
-
-string nrEditie= GetString("Item.Editie.Value");
+  bool AdserverBanner = GetBoolean("Item.Adserver_Banner.Value");
+  string linkBanner = GetString("Item.Link_Banner");
+  string imagineBanner = GetString("Item.Imagine_Banner");
+  string linkAutor = "";
+  string nrEditie= GetString("Item.Editie.Value");
 
   var pageId = GetPageIdByNavigationTag("ArticlesFeed").ToString();
   var autorPageID = GetPageIdByNavigationTag("AutoriFeed").ToString();
+  var autorPage = GetPageIdByNavigationTag("PaginaAutori").ToString();
   var pageService = new Dynamicweb.Content.PageService();
   var articlesID = pageService.GetPageForItem("Dw_Page", articleID).ID;
   var titluSectiune = GetString("Item.SectiuneParinteId.Value") == "25" ? Translate("De acelasi autor","De acelasi autor") : Translate("De aceeasi companie","De aceeasi companie");
@@ -71,74 +49,84 @@ string nrEditie= GetString("Item.Editie.Value");
       <div class="row blog-content" data-stickyparent>      
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 ">
           <article class="post-wrapper clearfix">
-            <div class="first-container" data-template="ArticleBodyTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID">
+            <div class="first-container-article" data-template="ArticleBodyTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID">
               @RenderPlaceholderImageTop("pre-render-element--xl")
             </div>
           </article><!-- .post-wrapper -->
 
-        <div class="related-posts clearfix">
-  <!-- Mid ad -->
- @if(AdserverBanner == true){            
-              
-            <div class="row" style="margin-bottom: 20px;">
-            <div class="mag-content clearfix">
-                <div class="row">
-                    <div class="col-md-12">                     
-                        <div class="ad666-wrapper">
-                          @Include("Custom/Banners/Leaderboard-top.cshtml")
-                        </div>                     
-                    </div>
+          @SnippetStart("Tags")
+           <div class="sidebar-handlebars-wrapper" data-template="TagsTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID">
+            </div>
+          @SnippetEnd("Tags")
+           <div class="row">
+                  <ul class="dwnavigation" id="blog-posts" data-settings="template:NextPrevious.xslt;expandmode:all;"></ul>
+            </div>  
+           <div class="related-posts clearfix">
+            <!-- Mid ad -->
+                  @if(AdserverBanner == true){            
+                        
+                      <div class="row" style="margin-bottom: 20px;">
+                      <div class="mag-content clearfix">
+                          <div class="row">
+                              <div class="col-md-12">                     
+                                  <div class="ad666-wrapper">
+                                    @Include("Custom/Banners/Leaderboard-top.cshtml")
+                                  </div>                     
+                              </div>
+                          </div>
+                      </div>
+                      </div>
+                        }else if(	!string.IsNullOrEmpty(linkBanner) && !string.IsNullOrEmpty(imagineBanner) ){
+                          
+                        <div class="row" style="margin-bottom: 20px;">
+                      <div class="mag-content clearfix">
+                          <div class="row">
+                              <div class="col-md-12">                     
+                                  <div class="ad666-wrapper">
+                                       <a href="@linkBanner">
+                                        <img src="@imagineBanner">
+                                
+                                      </a>
+                                  </div>                     
+                              </div>
+                          </div>
+                      </div>
+                      </div>
+
+                        }
+          <!-- End Mid ad -->
+                
+            <div class="row">
+          
+              <div class="col-md-6">
+                <h3 class="block-title"><span>@titluSectiune</span></h3>
+                <div class="row author-template" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageSize=3&Excluded=@currentPageId,">
+                  <div style="margin-right: 5px">
+                    @RenderPlaceholderImageTop("pre-render-element--md")
+                    @RenderPlaceholderImageTop("pre-render-element--md")
+                  </div>  
+                  
                 </div>
-            </div>
-            </div>
-              }else if(	!string.IsNullOrEmpty(linkBanner) && !string.IsNullOrEmpty(imagineBanner) ){
-              	
-              <div class="row" style="margin-bottom: 20px;">
-            <div class="mag-content clearfix">
-                <div class="row">
-                    <div class="col-md-12">                     
-                        <div class="ad666-wrapper">
-                       		   <a href="@linkBanner">
-                      				<img src="@imagineBanner">
-                      
-                      			</a>
-                        </div>                     
-                    </div>
-                </div>
-            </div>
-            </div>
-              	
-              <div class="row row-butoane-articol">
-                <div class="col-xs-12 col-sm-12"><a href="@linkAutor" class="btn btn-primary" style="background-color:#ffa700!important;">@Translate("VeziAlteArticoleAleCompanieiAutoare", "Alte articole ale companiei autoare")</a></div>
               </div>
-              }
-<!-- End Mid ad -->
-      
-  <div class="row">
-
-    <div class="col-md-6">
-      <h3 class="block-title"><span>@titluSectiune</span></h3>
-      <div class="row handlebars-wrapper" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&Excluded=&PageSize=3&Sectiune=@articleSectiuneID">
-      </div>
-    </div>
-    
-    <div class="col-md-6">
-      <h3 class="block-title"><span>@Translate("Din aceeasi sectiune","Din aceeasi sectiune")</span></h3>
-      <div class="row handlebars-wrapper" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&Excluded=@currentPageId&PageSize=3&Sections=@articleSectiuneID">
-      </div>
-    </div>
-  </div>  
-
-
-    <div class="row row-butoane-articol">
-        <div class="col-xs-12 col-sm-6 "><a href="/revista" class="btn btn-primary" style="background-color:#ffa700!important;">@Translate("VeziSectiunileRevisteiT&T", "Sectiunile revistei T&T")</a></div>
-        <div class="col-xs-12 col-sm-6 "><a href="/revista/web-exclusive" class="btn btn-primary" style="background-color:#ffa700!important;">@Translate("VeziArticoleWebExclusive", "Articole web exclusive")</a></div>
-    </div>
-
-    @Include("/Files/Templates/Designs/TTonline/ProdusePeArticol.cshtml")
-
-
-</div><!-- .related-post -->          
+              
+              <div class="col-md-6">
+                <h3 class="block-title"><span>@Translate("Din aceeasi sectiune","Din aceeasi sectiune")</span></h3>
+                <div class="row section-template" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&Excluded=@currentPageId&PageSize=3&SectiuneParinte=@articleSectiuneID">
+                  <div style="margin-left: 5px">
+                    @RenderPlaceholderImageTop("pre-render-element--md")
+                    @RenderPlaceholderImageTop("pre-render-element--md")
+                  </div>  
+                </div>
+              </div>
+            </div>          
+            <div class="row row-butoane-articol">
+                <div class="col-xs-12 col-sm-6 "><a href="/revista" class="btn btn-primary" style="background-color:#ffa700!important;">@Translate("VeziSectiunileRevisteiT&T", "Sectiunile revistei T&T")</a></div>
+                <div class="col-xs-12 col-sm-6 "><a href="/revista/web-exclusive" class="btn btn-primary" style="background-color:#ffa700!important;">@Translate("VeziArticoleWebExclusive", "Articole web exclusive")</a></div>
+            </div>
+        
+            @Include("/Files/Templates/Designs/TTonline/ProdusePeArticol.cshtml")          
+          
+          </div><!-- .related-post -->         
         
 <div class="col-xs-12">
   <div id="disqus_thread"></div>
@@ -241,23 +229,12 @@ s.setAttribute('data-timestamp', +new Date());
           {{/ifCond}}
           <!-- End Banner Articol -->
           <div class="row" style="text-align:center; margin-bottom: 20px;">
+           {{#if cereOferta}}
             @RenderCereOfertaButton()
+           {{/if}} 
           </div>
         </div><!-- .post-content -->
-         <footer class="post-meta">
-                      
-            @SnippetStart("Tags")
-                <div class="tags-wrapper">
-                  <ul class="tags-widget clearfix">
-                    <li class="trending">@Translate("TAGURI","TAGURI"):</li>
-                      {{#articleTags}}
-                          <li><a href="{{Link}}"><b>{{Name}}</b></a></li>
-                      {{/articleTags}}
-
-                  </ul>
-                </div><!-- .tags-wrapper -->
-            @SnippetEnd("Tags")  
-  
+         <footer class="post-meta">  
             <div class=" clearfix">
               <div class="share-buttons">                
                 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
@@ -270,61 +247,72 @@ s.setAttribute('data-timestamp', +new Date());
                       </div>
                    {{/articleAutori}}
                 {{/ifCond}}                
-            </div> 
-            <div class="row">
-                  <ul class="dwnavigation" id="blog-posts" data-settings="template:NextPrevious.xslt;expandmode:all;"></ul>
-            </div>         
-            
-            <div class="author-box clearfix" data-template="AuthorsTemplate" data-json-feed="data-autor-feed="@autorPageID">
-            </div>              
-         
+            </div>             
+            <div class="author-box clearfix" data-template="AuthorsTemplate" data-json-feed="Default.aspx?ID=@autorPageID&Autor=">
+            </div>                  
           </footer>
+          
     {{/each}}
 {{/ArticlesContainer}}              
 </script>
+<script id="TagsTemplate" type="text/x-handlebars-template">
+{{#ArticlesContainer}}
+	 {{#each Article}}
+         <div class="tags-wrapper">
+           <ul class="tags-widget clearfix">
+             <li class="trending">@Translate("TAGURI","TAGURI"):</li>
+               {{#articleTags}}
+                   <li><a href="{{Link}}"><b>{{Name}}</b></a></li>
+               {{/articleTags}}
+
+           </ul>
+         </div><!-- .tags-wrapper -->
+     {{/each}}
+{{/ArticlesContainer}}    
+</script>
 <script id="AuthorsTemplate" type="text/x-handlebars-template">
- @if(articlePersoana == "Persoana" ){
-   <div class="author-box clearfix ">
-      {{#ifCond autoriCount "===" "1"}}
-      <div class="col-xs-12">
-      <h5>Autori</h5>   
-      </div>
-      {{/ifCond}}
-      {{#ifCond autoriCount "===" "1"}}
-          {{#articleAutori}}
-             <div class="author-avatar">                   
-                 <img alt="" src="/Admin/Public/GetImage.ashx?Image={{Image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=100&Height=150&bgcolor=white" >
-             </div>
-             <div class="author-info">
-               <h3><a href="{{Link}}">{{Name}}</a></h3>
-                 <p class="author-bio">Description</p>
-             </div>
-          {{/articleAutori}}
-      {{/ifCond}}
-      {{#ifCond autoriCount "!==" "1"}}
-          {{#articleAutori}}
+  {{#ifCond counterAutori "===" "1"}}
+      {{#Autori}}
+           {{#ifCond persoana_companie "!==" "Persoana"}}  
+              <div class="col-xs-12">
+                <h5>Autori</h5>   
+              </div>
+            {{/ifCond}}
+      {{/Autori}}      
+      {{#Autori}}
+         {{#ifCond persoana_companie "!==" "Persoana"}}     
               <div class="col-xs-12 col-sm-12 col-md-6">
                   <div class="col-xs-3">
-                    <img alt="" src="/Admin/Public/GetImage.ashx?Image={{Image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=100&Height=150&bgcolor=white" >
+                    <img alt="" src="/Admin/Public/GetImage.ashx?Image={{imagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=100&Height=150&bgcolor=white" >
                   </div>
                   <div class="col-xs-9">
                     <p class="simple-share">
-                    <a href="{{Link}}">{{Name}}</a>
+                    <a href="/Default.aspx?ID=@autorPage&autor={{autorId}}">{{name}}</a>
                   </p>
                   </div>    
                 </div>
-           {{/articleAutori}}     
-      {{/ifCond}}
-        </div>
-
- }
+          {{/ifCond}}
+      {{/Autori}}
+  {{/ifCond}}
+   {{#ifCond counterAutori "===" "1"}}
+      {{#Autori}}
+         {{#ifCond persoana_companie "===" "Persoana"}}          
+                 <div class="author-avatar">                   
+                     <img alt="" src="/Admin/Public/GetImage.ashx?Image={{imagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=100&Height=150&bgcolor=white" >
+                 </div>
+                 <div class="author-info">
+                   <h3><a href="/Default.aspx?ID=@autorPage&autor={{autorId}}">{{name}}</a></h3>
+                     <p class="author-bio">{{description}}</p>
+                 </div>
+          {{/ifCond}}      
+      {{/Autori}}
+   {{/ifCond}}
 </script>
- 
 <script id="SectionTemplate" type="text/x-handlebars-template">
 {{#ArticlesContainer}}
 		{{#each Article}}
        <div class="col-xs-12">
-        <article class="news-block small-block" style="margin-bottom: 20px;">
+        <article class="news-block small-block" style="margin-bottom: 110px;">
           <a href="/Default.aspx?ID={{pagePageID}}" class="overlay-link">
           <figure class="image-overlay proportie-1">
             <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" alt="{{itemTitlu}}" class="img-responsive" />
@@ -355,9 +343,8 @@ s.setAttribute('data-timestamp', +new Date());
 @helper RenderCereOfertaButton()
 {
   <!-- Large modal -->
-  if (GetBoolean("Item.CereOferta")) {   
-    <button class="btn btn-primary" data-toggle="modal" data-target="#modalformularoferta" id="buton-modal-cere-detalii">@Translate("askForDetails","Cere detalii sau oferta")</button>
-  }
+  <button class="btn btn-primary" data-toggle="modal" data-target="#modalformularoferta" id="buton-modal-cere-detalii">@Translate("askForDetails","Cere detalii sau oferta")</button>
+  
   <div class="modal fade bd-example-modal-sm" id="modalformularoferta" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="background-color:rgba(255,255,255, 0.7);">
     <div class="modal-dialog modal-sm">
       <div class="modal-content">
@@ -376,24 +363,17 @@ s.setAttribute('data-timestamp', +new Date());
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 ga('create', 'UA-26068739-1', 'auto');
-
-
 // START DIMENSIUNI
-
 // DIMENSIUNI PENTRU Romanian Industry Zoom:
 var dw_editie = '@nrEditie';
 var dw_autor = '@articleAutori';
 var dw_companie = '@articleCompanyDe';
 var dw_data_aparitie = '@GetDate("Item.Data.Value").ToString("dd/MM/yyyy")'; // format dd.mm.yyyy
-
 ga('set', 'dimension1', dw_editie);
 ga('set', 'dimension2', dw_autor);
 ga('set', 'dimension3', dw_companie);
 ga('set', 'dimension9', dw_data_aparitie);
-
 // END DIMENSIUNI
-
-
 ga('send', 'pageview');
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
